Remove --dependencies option from qmltyperegistrar

We don't need to list the dependencies in the qmltypes files. The
information given in the qmldir file should be enough. Ultimately, we
should get rid of all hidden dependencies.

Task-number: QTBUG-84286
Change-Id: Iaf67d476b449215715270043591d8c4858104ea6
Reviewed-by: Christian Kamm <mail@ckamm.de>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>