src/qmltyperegistrar/qmltypescreator.h
@@ -40,7 +40,7 @@ class QmlTypesCreator
 public:
     QmlTypesCreator() : m_qml(&m_output) {}
 
-    void generate(const QString &outFileName, const QString &dependenciesFileName);
+    void generate(const QString &outFileName);
 
     void setOwnTypes(QVector<QJsonObject> ownTypes) { m_ownTypes = std::move(ownTypes); }
     void setForeignTypes(QVector<QJsonObject> foreignTypes) { m_foreignTypes = std::move(foreignTypes); }
